# digitroundingZ

./: Makefile.in  README.md  configure
examples/: Makefile.in  digit_CompDecomp.c  digitfloat_CompDecomp.c
libdround/: CMakeLists.txt  Makefile.am  Makefile.in
libdround/include/: libdround.h
libdround/src/: bitshuffle_core.c  libdround.c
zlib/: CMakeLists.txt  Makefile.in
